[metadata]
name = realms-wiki
author = Matthew Scragg
author-email = scragg@gmail.com
description-file =
    README.md
home-page = https://github.com/scragg0x/realms-wiki
requires-python = >=2.7
classifier =
        Intended Audience :: Developers
        License :: OSI Approved :: GNU General Public License v2 (GPLv2)
        Operating System :: POSIX :: Linux
        Programming Language :: Python :: 2.7
        Topic :: Internet :: WWW/HTTP :: Dynamic Content

[files]
packages =
    realms

[entry_points]
console_scripts =
    realms-wiki = realms.commands:main

[wheel]
universal = 1
